jitfailure-ffc_form_21bac23b528bd6d6af9ee80cd573f169a4975ab5/error.log
/tmp/tmpuppgd14k/ffc_form_21bac23b528bd6d6af9ee80cd573f169a4975ab5.cpp: In member function 'virtual void ffc_form_21bac23b528bd6d6af9ee80cd573f169a4975ab5_cell_integral_main_otherwise::tabulate_tensor(double*, const double* const*, const double*, int) const':
/tmp/tmpuppgd14k/ffc_form_21bac23b528bd6d6af9ee80cd573f169a4975ab5.cpp:117:18: error: redeclaration of 'const double J_c0'
  117 |     const double J_c0 = coordinate_dofs[0] * FE10_C0_D01_Q6[0][0][0] + coordinate_dofs[2] * FE10_C0_D01_Q6[0][0][1];
      |                  ^~~~
/tmp/tmpuppgd14k/ffc_form_21bac23b528bd6d6af9ee80cd573f169a4975ab5.cpp:113:18: note: 'const double J_c0' previously declared here
  113 |     const double J_c0 = coordinate_dofs[0] * FE10_C0_D01_Q6[0][0][0] + coordinate_dofs[2] * FE10_C0_D01_Q6[0][0][1];
      |                  ^~~~
/tmp/tmpuppgd14k/ffc_form_21bac23b528bd6d6af9ee80cd573f169a4975ab5.cpp:118:18: error: redeclaration of 'const double J_c3'
  118 |     const double J_c3 = coordinate_dofs[1] * FE10_C0_D01_Q6[0][0][0] + coordinate_dofs[5] * FE10_C0_D01_Q6[0][0][1];
      |                  ^~~~
/tmp/tmpuppgd14k/ffc_form_21bac23b528bd6d6af9ee80cd573f169a4975ab5.cpp:114:18: note: 'const double J_c3' previously declared here
  114 |     const double J_c3 = coordinate_dofs[1] * FE10_C0_D01_Q6[0][0][0] + coordinate_dofs[5] * FE10_C0_D01_Q6[0][0][1];
      |                  ^~~~
/tmp/tmpuppgd14k/ffc_form_21bac23b528bd6d6af9ee80cd573f169a4975ab5.cpp:119:18: error: redeclaration of 'const double J_c1'
  119 |     const double J_c1 = coordinate_dofs[0] * FE10_C0_D01_Q6[0][0][0] + coordinate_dofs[4] * FE10_C0_D01_Q6[0][0][1];
      |                  ^~~~
/tmp/tmpuppgd14k/ffc_form_21bac23b528bd6d6af9ee80cd573f169a4975ab5.cpp:115:18: note: 'const double J_c1' previously declared here
  115 |     const double J_c1 = coordinate_dofs[0] * FE10_C0_D01_Q6[0][0][0] + coordinate_dofs[4] * FE10_C0_D01_Q6[0][0][1];
      |                  ^~~~
/tmp/tmpuppgd14k/ffc_form_21bac23b528bd6d6af9ee80cd573f169a4975ab5.cpp:120:18: error: redeclaration of 'const double J_c2'
  120 |     const double J_c2 = coordinate_dofs[1] * FE10_C0_D01_Q6[0][0][0] + coordinate_dofs[3] * FE10_C0_D01_Q6[0][0][1];
      |                  ^~~~
/tmp/tmpuppgd14k/ffc_form_21bac23b528bd6d6af9ee80cd573f169a4975ab5.cpp:116:18: note: 'const double J_c2' previously declared here
  116 |     const double J_c2 = coordinate_dofs[1] * FE10_C0_D01_Q6[0][0][0] + coordinate_dofs[3] * FE10_C0_D01_Q6[0][0][1];
      |                  ^~~~
